crates/sakka-test/tests/trybuild/optional_non_option.rs
use sakka::{Decode, Encode};

#[derive(Debug, PartialEq, Encode, Decode)]
struct OptionalOnNonOption {
    #[sakka(optional(bool))]
    value: u16,
}

fn main() {}
